# yt-dlp-v8

./: README.md  pyproject.toml
src/yt_dlp_plugins/extractor/: v8js.py
src/yt_dlp_v8/: __init__.py
