[project]
name = "yt-dlp-v8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AmaseCocoa", email = "cocoa@amase.cc" }
]
requires-python = ">=3.10"
dependencies = [
    "stpyv8>=13.1.201.22",
    "yt-dlp>=2025.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.env.default]
installer = "uv"
path = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dlp_plugins"]

[tool.hatch.metadata]
allow-direct-references = true